kubernetes/workloads/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-service
  namespace: media
spec:
  selector:
    app: jellyseerr
  ports:
    - port: 5055
      targetPort: http
