kubernetes/workloads/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: jellyseerr.nverk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr-service
                port:
                  number: 5055
    - host: requests.nverk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr-service
                port:
                  number: 5055
